Fix overflow issue

--- a/_sass/pooleparty/_posts.pre.scss
+++ b/_sass/pooleparty/_posts.pre.scss
@@ -56,8 +56,8 @@ body:not(.no-third-column) {
   justify-content: space-between;
   white-space: nowrap;
   margin-top: -.6rem;
-  height: 1.85rem;
-  margin-bottom: 1rem;
+  height: 2rem;
+  margin-bottom: .85rem;
   color: var(--gray);
 
   [class^="icon-"] { 
